my commit added submit button

--- a/students.html
+++ b/students.html
@@ -6,15 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>Hostel Despription</li>
+            <li>Hostel-Staff Workers</li>
+            <li>Policies and Regulation</li>
+        </ul>
+    </nav>
     <form action="form-wrap">
         <h1>Students' Portal</h1>
         <section>
             <h1>Personal Details</h1>
             Name: <input type="text" placeholder="Name">
             ID Number: <input type="number" placeholder="ID Number">
-            Email: <input type="email" placeholder="Email">
+            Birth Date: <input type="datetime" placeholder="DOB">
+            Email: <input type="email" placeholder="example@gmail.com">
             Gender: Male<input type="checkbox" placeholder="Male">
-                  : Female<input type="checkbox" placeholder="Female"
+                  Female<input type="checkbox" placeholder="Female">
+            Religion: <input type="text" placeholder="Religion">
             Select Hostel: <input type="text" placeholder="Select Hostel">
             Transaction ID: <input type="text" placeholder="Transaction ID">
             Room Type: <input type="text" placeholder="Room Type">
@@ -24,7 +33,7 @@
             Course: <input type="text" placeholder="MBA">
             Branch: <input type="text" placeholder="MBA">
             Semester: <input type="number" placeholder="Sem No.">
-            Section: <input type="search">
+            Roll No: <input type="number" placeholder="Admission no">
         </section>
         <section>
             <h1>General Information</h1>
@@ -33,6 +42,20 @@
             Address: <input type="tel" placeholder="Address">
             Nationality: <input type="text" placeholder="Country">
         </section>
+        <section>
+            <h1>Guardian/Parent Information</h1>
+            <h2>Parent-1</h2>
+            Name: <input type="text" placeholder="Name">
+            Contact: <input type="number" placeholder="Mobile No">
+            Email: <input type="email" placeholder="example@gmail.com">
+            ID No: <input type="number" placeholder="ID No">
+            <h2>Parent-2</h2>
+            Name: <input type="text" placeholder="Name">
+            Contact: <input type="number" placeholder="Mobile No">
+            Email: <input type="email" placeholder="example@gmail.com">
+            ID No: <input type="number" placeholder="ID No">
+        </section>
+        <input type="submit" aria-pressed="true">
     </form>
 </body>
 </html>
