my commit added navigation bar

--- a/index3.html
+++ b/index3.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Students' Portal</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li>Hostel Despription</li>
-            <li>Hostel-Staff Workers</li>
-            <li>Policies and Regulation</li>
+            <li><a href="description.html">Hostel Despription</a></li>
         </ul>
     </nav>
     <form action="form-wrap">
         <h1>Students' Portal</h1>
         <section>
             <h1>Personal Details</h1>
-            Name: <input type="text" placeholder="Name">
+            First Name: <input type="text" placeholder=" Fir Name">
+            Middle Name: <input type="text" placeholder="Mid Name">
+            Surname Name: <input type="text" placeholder="Sur Name">
             ID Number: <input type="number" placeholder="ID Number">
             Birth Date: <input type="datetime" placeholder="DOB">
             Email: <input type="email" placeholder="example@gmail.com">
@@ -49,11 +49,21 @@
             Contact: <input type="number" placeholder="Mobile No">
             Email: <input type="email" placeholder="example@gmail.com">
             ID No: <input type="number" placeholder="ID No">
+            Address: <input type="tel" placeholder="Address">
             <h2>Parent-2</h2>
             Name: <input type="text" placeholder="Name">
             Contact: <input type="number" placeholder="Mobile No">
             Email: <input type="email" placeholder="example@gmail.com">
             ID No: <input type="number" placeholder="ID No">
+            Address: <input type="tel" placeholder="Address">
+        </section>
+        <section>
+            <h1>Education Information</h1>
+            Course: <input type="text" placeholder="MBA">
+            Branch: <input type="text" placeholder="MBA">
+            Semester: <input type="number" placeholder="Sem No.">
+            Year Level: <input type="number" placeholder="Level">
+            Roll No: <input type="number" placeholder="Admission no">
         </section>
         <input type="submit" aria-pressed="true">
     </form>
