my commit modified hostel link

--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="description.html">Hostel Despription</a></li>
+            <li><a href="hostel4.html">Hostel</a></li>
         </ul>
     </nav>
     <form action="form-wrap">
