my commit added an email

--- a/contact1.html
+++ b/contact1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="contact1.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
 	</span>
 
 	<span>
-		<h3 class="elementskit-info-box-title">richarddev@gmail.com</h3>
+		<h3 class="elementskit-info-box-title">nyumbanihostels@gmail.com</h3>
 		<p>Drop us a line </p>
 	</span>
 	</div>
