--- a/login1.html
+++ b/login1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="login4.css">
     <title>Hostel.io</title>
 </head>
@@ -92,8 +93,8 @@
 
 <div id="about1">
   <ul>
-    <li><img src="./images/24-royalhighschool.jpg" width=170px; heigh=110px;><p><br>100 <br>Rooms</p></li>
-    <li><img src="./images/27-royalhighschool.jpg" width=170px; heigh=110px;><p><br> 10<br>Hangout<br>Zone</p></li>
+    <li><img src="./images/27-royalhighschool.jpg" width=170px; heigh=110px;><p><br>100 <br>Rooms</p></li>
+    <li><img src="./images/24-royalhighschool.jpg" width=170px; heigh=110px;><p><br> 10<br>Hangout<br>Zone</p></li>
     <li><img src="./images/_dsc0897-copy.jpg" width=170px; heigh=110px;><p><br>Diverse <br> Society</p></li>
   </ul>
 </div>
