--- a/students.html
+++ b/students.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&display=swap" rel="stylesheet">
     <title>Students' Portal</title>
     <linK rel="stylesheet" type="text/css"  href="students.css">
 </head>
@@ -20,22 +21,23 @@
         </nav>
 </header>
     <form>
-        <h1 style="text-align: center;">Students' Portal</h1>
-        <h3>Personal Details</h3>
+        <h1 style="text-align: center;">Student's Portal</h1>
+    
             <div class="container5">
-                    <img src="ground.jpeg">
+                    <img src="./images/image 3.jpg">
                 <div class="section1">
-            First Name: <input type="text" placeholder="Fir Name" size="50" height= "200%"> <br>
-            Last Name: <input type="text" placeholder="last Name" size="50"> <br>
-            ID Number: <input type="number" placeholder="ID Number" size="60"> <br>
-            Email: <input type="email" placeholder="example@gmail.com" size="50" > <br>
-            Gender:  Male<input type="checkbox" placeholder="Male" size="60"> 
-                    Female<input type="checkbox" placeholder="Female">  <br>
-            Transaction NO: <input type="text" placeholder="Transaction NO" size="35"><br>
-            Room Number: <input type="number" placeholder="Room Number" size="70"> <br>
-            Check-in Date: <input type="month" placeholder="Check-in Date" size="70"> <br>
-            Check-out Date: <input type="month" placeholder="Check-out Date" size="50"> <br>
-            Contact: <input type="tel"  placeholder="contact" width="50"> <br>
+                    <p>*Fill all columns</p>
+            First Name: <input type="text" placeholder="Fir Name" size="50" style="height: 30px;"> <br>
+            Last Name: <input type="text" placeholder="last Name" size="50" style="height: 30px;"> <br>
+            ID Number: <input type="number" placeholder="ID Number" size="60" style="height: 30px;"> <br>
+            Email: <input type="email" placeholder="example@gmail.com" size="50" style="height: 30px;"> <br>
+            Gender:  Male<input type="checkbox" placeholder="Male" size="60" style="height: 30px;"> 
+                    Female<input type="checkbox" placeholder="Female" style="height: 30px;">  <br>
+            Transaction NO: <input type="text" placeholder="Transaction NO" size="35" style="height: 30px;"><br>
+            Room Number: <input type="number" placeholder="Room Number" size="70" style="height: 30px;"> <br>
+            Check-in Date: <input type="month" placeholder="Check-in Date" size="70" style="height: 30px;"> <br>
+            Check-out Date: <input type="month" placeholder="Check-out Date" size="50" style="height: 30px;"> <br>
+            Contact: <input type="tel"  placeholder="contact" width="50" style="height: 30px;"> <br>
             <input type="submit" aria-pressed="true" > <br>
                 </div>
             </div>
