--- a/contact1.html
+++ b/contact1.html
@@ -14,7 +14,7 @@
             <img src="./images/LOGO.jpeg" height="100px" width="100px" class="logo">
             <nav>
                 <ol>
-                    <li><a href="login1.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="hostel4.html">About</a></li>
                     <li><a href="contact1.html">Contact us</a></li>
                     <li> <a class="book" href="students.html">Book Now</a></li>
