--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div id="login4">
   
-  <form class="content4" action="/action_page.php" method="post">
+  <form class="content4" >
     <div class="imgcontainer">
       <span onclick="document.getElementById('login4').style.display='none'" class="cancel4" title="Close Login">&times;</span>
       <img src="./images/avater.jpeg" alt="Avatar" >
@@ -48,7 +48,7 @@
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
         
-      <button type="submit" value="submit" id="account4">Login</button>
+      <button type="submit" aria-pressed="true" id="account4">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember"> Remember me
         <span class="forgot">Forgot <a href="#">password?</a></span>
@@ -61,7 +61,7 @@
 
 <div id="sign1">
   <span onclick="document.getElementById('sign1').style.display='none'" class="cancel4" title="Close sign up">&times;</span>
-  <form class="content4" action="/action_page.php">
+  <form class="content4">
     <div class="signup">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
@@ -83,7 +83,7 @@
 
       <div class="clearfix">
         <button type="button" onclick="document.getElementById('sign1').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="submit" aria-pressed="true" class="signupbtn">Sign Up</button>
       </div>
     </div>
   </form>
