--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <ul>
     <li><img src="./images/27-royalhighschool.jpg" width=170px; heigh=110px;><p><br>100 <br>Rooms</p></li>
     <li><img src="./images/24-royalhighschool.jpg" width=170px; heigh=110px;><p><br> 10<br>Hangout<br>Zone</p></li>
-    <li><img src="./images/_dsc0897-copy.jpg" width=170px; heigh=110px;><p><br>Diverse <br> Society</p></li>
+    <li><img src="./images/dsc0897-copy.jpg" width=170px; heigh=110px;><p><br>Diverse <br> Society</p></li>
   </ul>
 </div>
  <div id="about2" class="overlay">
